<resources>

    <string name="app_name">Floating Speedrun Timer</string>

    <string name="chrono_millis">.00</string>
    <string name="chrono_rest">0:00</string>
    <string name="hint_game_title">Game title</string>
    <string name="hint_game_category">Category</string>
    <string name="hint_new_split">Split name</string>
    <string name="hint_run_id">Run ID</string>
    <string name="split_position">Position:</string>
    <string name="text_name">Name:</string>
    <string name="empty_games_list">No games</string>
    <string name="empty_category_list">No categories</string>
    <string name="empty_leaderboard">Leaderboard is empty</string>
    <string name="pb_text">PB:</string>
    <string name="pb_placeholder">00:00:00.00</string>
    <string name="runs_text">Runs:</string>
    <string name="run_count_text">Run count:</string>
    <string name="hr_hint">Hrs</string>
    <string name="mins_hint">Mins</string>
    <string name="secs_hint">Secs</string>
    <string name="millis_hint">Millis</string>
    <string name="time_clear">Clear</string>
    <string name="sob_text">Sum of best segments:</string>
    <string name="save_reset">Save &amp; reset</string>
    <string name="reset">Reset</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="pb_clear">Clear</string>
    <string name="close">Close</string>
    <string name="undo">Undo</string>
    <string name="rate">Rate</string>
    <string name="add">Add</string>
    <string name="dialog_timer_active">Timer is active. Close anyway?</string>
    <string name="dialog_close_timer_on_resume">Timer must be closed in order to use the app.</string>
    <string name="dialog_delete_categories">Delete selected categories?</string>
    <string name="dialog_delete_categories_msg">Your PBs and splits will be lost.</string>
    <string name="dialog_delete_games">Delete selected games?</string>
    <string name="dialog_delete_games_msg">All categories, PBs and splits associated with the games will be lost.</string>
    <string name="dialog_import_splits">Import Splits from splits.io</string>
    <string name="dialog_import_splits_msg">Enter a splits.io Run ID below.</string>
    <string name="dialog_import_splits_overwrite">All existing data will be overwritten and lost. Import anyway?</string>
    <string name="dialog_clear_splits">PB and Best Segments will be lost. Are you sure?</string>
    <string name="do_import">Import</string>
    <string name="rate_snackbar">If you like this app, please rate it in the Play Store.</string>
    <string name="add_games_snackbar">Games detected on device. Add them?</string>
    <string name="no_games_to_add">There are no games to add</string>
    <string name="toast_close_active_timer">"Please close the currently active timer."</string>
    <string name="toast_allow_permission">"Please allow the app to display over other apps for the timer to work."</string>
    <string name="close_timer">Close timer</string>
    <string name="button_lb_link">View on Speedrun.com</string>
    <string name="button_wr_link">Watch WR</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help &amp; feedback</string>
    <string name="menu_add_installed_games">Add installed games</string>
    <string name="menu_clear_splits">Clear splits</string>
    <string name="menu_import_splitsio">Import from splits.io</string>
    <string name="menu_export_splitsio">Upload to splits.io</string>
    <string name="img_next_desc">Go to game categories</string>
    <string name="img_play_desc">Open timer</string>
    <string name="img_show_more_desc">Show more</string>
    <string name="img_link_desc">External link</string>
    <string name="splits_comparison">Comparison:</string>
    <string name="splits_header_name">Segment Name</string>
    <string name="splits_header_segment_time">Segment Time</string>
    <string name="splits_header_split_time">Split Time</string>
    <string name="split_name_text">Name:</string>
    <string name="split_name_hint">Split Name</string>
    <string name="pb_seg_text">PB:</string>
    <string name="best_seg_text">Best:</string>
    <string name="bottom_sheet_view_splits">View &amp; edit splits</string>
    <string name="bottom_sheet_view_launch">Launch timer</string>
    <string name="appwidget_text">FST</string>
    <string name="configure">Choose game and category</string>
    <string name="add_widget">Add widget</string>

    <string-array name="fragment_game_tabs">
        <item>Categories</item>
        <item>Info</item>
    </string-array>

    <string-array name="splits_comparison">
        <item>Current Comparison</item>
        <item>Personal Best</item>
        <item>Best Segments</item>
    </string-array>

    <!-- Intent actions and extras -->
    <string name="action_close_timer">il.ronmad.speedruntimer.action.CLOSE_TIMER</string>
    <string name="action_start_timer">il.ronmad.speedruntimer.action.START_TIMER</string>
    <string name="extra_game">il.ronmad.speedruntimer.extra.GAME</string>
    <string name="extra_category">il.ronmad.speedruntimer.extra.CATEGORY_NAME</string>
    <string name="extra_close_timer_from_onresume">il.ronmad.speedruntimer.extra.CLOSE_FROM_ONRESUME</string>

    <integer name="notification_id">1234</integer>
    <string name="notification_channel_id">il.ronmad.speedruntimer.NOTIFICATION_CHANNEL</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">Help &amp; Feedback</string>
    <string name="pref_header_timer_colors">Timer colors</string>
    <string name="pref_header_timing">Timing settings</string>
    <string name="pref_header_display">Display</string>
    <string name="pref_header_app_behavior">App behavior</string>
    <string name="pref_color_neutral_title">Neutral</string>
    <string name="pref_color_ahead_title">Ahead</string>
    <string name="pref_color_behind_title">Behind</string>
    <string name="pref_color_pb_title">PB</string>
    <string name="pref_color_best_segment_title">Best Segment</string>
    <string name="pref_color_background_title">Timer background</string>
    <string name="pref_timer_size_title">Timer size</string>
    <string name="pref_timer_countdown_title">Set timer countdown</string>
    <string name="pref_timer_show_millis_title">Show milliseconds</string>
    <string name="pref_timer_always_show_minutes_title">Always show minutes</string>
    <string name="pref_always_show_minutes_summary_true">0:00.00</string>
    <string name="pref_always_show_minutes_summary_false">0.00</string>
    <string name="pref_timer_show_delta_title">Show delta</string>
    <string name="pref_timer_show_current_split_title">Show current split</string>
    <string name="pref_launch_games_title">Launch games</string>
    <string name="pref_launch_games_summary_true">Launch the chosen game along with the timer</string>
    <string name="pref_launch_games_summary_false">Start the timer only</string>
    <string name="pref_save_time_data_title">Save times</string>
    <string name="pref_save_time_data_summary_true">Save new best times and splits when resetting</string>
    <string name="pref_save_time_data_summary_false">
        New best times will not be saved, \"New PB\" dialog won\'t be shown</string>
    <string name="pref_compare_against_title">Compare against</string>

    <string-array name="timer_sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="timer_sizes_values">
        <item>24</item>
        <item>32</item>
        <item>40</item>
    </string-array>

    <string-array name="compare_against">
        <item>Personal Best</item>
        <item>Best Segments</item>
    </string-array>

    <string-array name="compare_against_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Keys -->
    <string name="key_games">il.ronmad.speedruntimer.GAMES</string>
    <string name="key_launch_counter">il.ronmad.speedruntimer.LAUNCH_COUNTER</string>
    <string name="key_rate_snackbar_shown">il.ronmad.speedruntimer.RATE_SHOWN</string>
    <string name="key_add_games_snackbar_shown">il.ronmad.speedruntimer.ADD_GAMES_SHOWN</string>
    <string name="key_pref_color_neutral">color_neutral</string>
    <string name="key_pref_color_ahead">color_ahead</string>
    <string name="key_pref_color_behind">color_behind</string>
    <string name="key_pref_color_pb">color_pb</string>
    <string name="key_pref_color_best_segment">color_best_segment</string>
    <string name="key_pref_color_background">color_background</string>
    <string name="key_pref_timer_size">timer_size</string>
    <string name="key_pref_timer_countdown">countdown_preference</string>
    <string name="key_pref_timer_show_millis">il.ronmad.speedruntimer.key.SHOW_MILLIS</string>
    <string name="key_pref_timer_always_minutes">il.ronmad.speedruntimer.key.ALWAYS_MINUTES</string>
    <string name="key_pref_timer_show_delta">il.ronmad.speedruntimer.key.SHOW_DELTA</string>
    <string name="key_pref_timer_show_current_split">il.ronmad.speedruntimer.key.SHOW_CURRENT_SPLIT</string>
    <string name="key_pref_launch_games">il.ronmad.speedruntimer.key.LAUNCH_GAMES</string>
    <string name="key_pref_save_time_data">il.ronmad.speedruntimer.key.SAVE_DATA</string>
    <string name="key_pref_compare_against">il.ronmad.speedruntimer.key.COMPARE_AGAINST</string>

</resources>
