<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <il.ronmad.speedruntimer.CountdownPreference
        android:key="@string/key_pref_timer_countdown"
        android:title="@string/pref_timer_countdown_title"
        android:defaultValue="0" />

    <CheckBoxPreference
        android:key="@string/key_pref_timer_show_millis"
        android:title="@string/pref_timer_show_millis_title"
        android:defaultValue="true" />

    <ListPreference
        android:key="@string/key_pref_compare_against"
        android:title="@string/pref_compare_against_title"
        android:entries="@array/compare_against"
        android:entryValues="@array/compare_against_values"
        android:defaultValue="0" />

    <CheckBoxPreference
        android:key="@string/key_pref_timer_show_delta"
        android:title="@string/pref_timer_show_delta_title"
        android:defaultValue="true" />

</PreferenceScreen>
