<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.jaredrummler.android.colorpicker.ColorPreference
        android:key="@string/key_pref_color_neutral"
        android:title="@string/pref_color_neutral_title"
        android:defaultValue="@color/colorTimerNeutralDefault"
        app:cpv_showAlphaSlider="true"
        app:cpv_allowPresets="false"
        app:cpv_dialogType="custom" />

    <com.jaredrummler.android.colorpicker.ColorPreference
        android:key="@string/key_pref_color_ahead"
        android:title="@string/pref_color_ahead_title"
        android:defaultValue="@color/colorTimerAheadDefault"
        app:cpv_showAlphaSlider="true"
        app:cpv_allowPresets="false"
        app:cpv_dialogType="custom" />

    <com.jaredrummler.android.colorpicker.ColorPreference
        android:key="@string/key_pref_color_behind"
        android:title="@string/pref_color_behind_title"
        android:defaultValue="@color/colorTimerBehindDefault"
        app:cpv_showAlphaSlider="true"
        app:cpv_allowPresets="false"
        app:cpv_dialogType="custom" />

    <com.jaredrummler.android.colorpicker.ColorPreference
        android:key="@string/key_pref_color_pb"
        android:title="@string/pref_color_pb_title"
        android:defaultValue="@color/colorTimerPBDefault"
        app:cpv_showAlphaSlider="true"
        app:cpv_allowPresets="false"
        app:cpv_dialogType="custom" />

</PreferenceScreen>
