<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->
    <header
        android:fragment="il.ronmad.speedruntimer.SettingsActivity$TimerColorsPreferenceFragment"
        android:title="@string/pref_header_timer_colors" />

    <header
        android:fragment="il.ronmad.speedruntimer.SettingsActivity$DisplayPreferenceFragment"
        android:title="@string/pref_header_display" />

    <header
        android:fragment="il.ronmad.speedruntimer.SettingsActivity$TimingPreferenceFragment"
        android:title="@string/pref_header_timing" />

    <header
        android:fragment="il.ronmad.speedruntimer.SettingsActivity$AppBehaviorPreferenceFragment"
        android:title="@string/pref_header_app_behavior" />

</preference-headers>
