<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_import_splitsio"
        android:title="@string/menu_import_splitsio"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_export_splitsio"
        android:title="@string/menu_export_splitsio"
        android:icon="@drawable/ic_file_upload_black_24dp"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_clear_splits"
        android:title="@string/menu_clear_splits"
        android:icon="@drawable/ic_timer_off_black_24dp"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

</menu>
