<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/dialog_padding"
    android:paddingRight="@dimen/dialog_padding"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hr_hint"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="2"
        android:nextFocusDown="@+id/minutes"
        android:selectAllOnFocus="true" />

    <TextView
        android:id="@+id/hrMinColon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/mins_hint"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="2"
        android:nextFocusDown="@+id/seconds"
        android:selectAllOnFocus="true" />

    <TextView
        android:id="@+id/minSecColon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/secs_hint"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="2"
        android:nextFocusDown="@+id/milliseconds"
        android:selectAllOnFocus="true" />

    <TextView
        android:id="@+id/secMillDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="."
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/milliseconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/millis_hint"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="3"
        android:selectAllOnFocus="true" />

</LinearLayout>
